#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-08-06-0: Enhancem.:  Added new check for issue #3096 into existing
                             shadowd_migrate test
                 Review:     DG

RH-2009-08-05-0: Enhancem.:  Hedeby: Adjustments for first check in of the bound
                                     resource concept
                 Review:     TB

SH-2009-08-04-0: Enhancem.:  Enhanced usage-test for maxvmem
                 Bugster:    6287864
                 Issue:      1314
                 Review:     JG

JG-2009-08-04-0: Enhancem.:  New check for IZ 3094.
                 Review:     HP

AP-2009-07-28-0: Bugfix:     Removing framework procedures call from init_level
                             function
                 Belongs to: AP-2009-07-27-0
                 Review:     CR

MD-2009-07-28-0: Enhancem.:  added new test for IZ 3088 (jsv)
                 Bugster:    6862580
                 Issue:      3088
                 Review:     EB

CR-2009-07-27-0: Enhancem.:  Integrate upgrade test (Part II)
                             o install_binaries():
                                - clear arch cache and wait on all cluster hosts
                                  for NFS avail. of $SGE_ROOT/bin/$arch dir
                             o get_release_packages():
                                - optimized file list which has to be copied
                                - delete tar packages after unpacking
                             o resolve_arch():
                                - wait for NFS availablity of arch script if 
                                  script only exists on local host