@@ -41,7 +41,7 @@ global check_use_installed_system check_init_level_procedure
 # This file shows some check spezific things
 set check_root_access_needs    "yes"
 set check_name                 "ambiguous_resource_assignment"
-set check_category             "COMPATIBILITY SYSTEM L10N VERIFIED"
+set check_category             "COMPATIBILITY SYSTEM L10N TODO" 
 set check_description(0)       "basic resource movement test"
 set check_needs                "hedeby_install"                  
 set check_init_level_procedure "ambiguous_resource_assignment_init_level"
