@@ -262,7 +262,7 @@ proc basic_resource_reset_sequential_check {} {
 
                 # parse output and compare it to the expected output ...
                 # build expected output message from bundle properties file ... 
-                set expected_output [create_bundle_string "ResetResourceCommand.resource.reset"]
+                set expected_output [create_bundle_string "rm.rs.triggered"]
                 ts_log_fine "expected output: \"$expected_output\""
 
                 # get sdmadm output message string ...
